--- a/src/Componente/Medida_icono.css
+++ b/src/Componente/Medida_icono.css
@@ -14,6 +14,7 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    margin: 5%;
 }
 .medidaClienteImg:hover{
     background-color: #F6F5F4FF;
@@ -22,6 +23,7 @@
     width: 90%;
     height: 90%;
     background-color: #FFFFFFFF;
+    margin: 5%;
     }
 .medidaClienteNombre{
     height: 10%;
