--- a/src/Pagina/DashBoard.css
+++ b/src/Pagina/DashBoard.css
@@ -2,12 +2,8 @@
     background-image: url("../Img/fondo0.png");
     background-size: cover;
     background-repeat: no-repeat;
-  }
-  .fondo{
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
     flex-direction: column;
-    width: 100%;
-    height: 100vh;
+    justify-content: center;
+    align-items: center;
   }
