--- a/src/Componente/Preview.css
+++ b/src/Componente/Preview.css
@@ -26,6 +26,7 @@ main{
     opacity: 0.8;
     margin-left: 10%;
     margin-right: 10%;
+    margin-bottom: 20px;
 }
 #iniciarPrueba{
     margin-top: 10px;
