--- a/src/Componente/Bar.css
+++ b/src/Componente/Bar.css
@@ -12,13 +12,23 @@
   width: auto;
   height: 60%;
 }
-#iniciarSesion{
-  margin-left: auto;
-}
 #acercaDe{
-  margin-left: 50px;
+  margin-left: auto;
+  margin-right: 25px;
+}
+#configuracion{
+  margin-left: 25px;
+  margin-right: 25px;
+}
+#cerrarSesion{
+  margin-left: 25px;
   margin-right: 50px;
 }
+#iniciarSesion{
+  margin-left: 25px;
+  margin-right: 50px;
+}
+
 .link{
   cursor: pointer;
   font-style: italic;
