--- a/src/Componente/MedidaDash.css
+++ b/src/Componente/MedidaDash.css
@@ -1,6 +1,6 @@
 .medidaList{
     width: 85%;
-    height: 30%;
+    height: 34vh;
     display: flex;
     justify-content: center;
     align-items: center;
