--- a/src/Pagina/DashBoard.css
+++ b/src/Pagina/DashBoard.css
@@ -4,6 +4,7 @@
     background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    min-height:100vh;
   }
